--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -18,8 +18,6 @@
         justify-content: center;
         align-items: center;
         padding: 10px;
-        margin-top: 20px;
-
     }
 
     .servicios__info__titulo {
@@ -29,7 +27,7 @@
         color: #ffffff;
         margin-top: 20px;
         text-transform: uppercase;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
     }
 
     .servicios__cards {
@@ -126,7 +124,7 @@
         flex-flow: column wrap;
         color: #fff;
         min-height: 30vh;
-        margin-top: 100px;
+        margin-top: 50px;
 
     }
 
@@ -142,9 +140,7 @@
         text-transform: uppercase;
         color: #ffff;
         text-align: center;
-        font-family: 'Inria Sans', sans-serif;
-
-
+        font-family: 'Montserrat';
     }
 
     .fechas__cards {
@@ -192,7 +188,7 @@
         text-transform: uppercase;
         margin-bottom: 30px;
         margin-top: 20px;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
         color: #fff;
     }
 
@@ -230,7 +226,6 @@
         align-items: center;
         width: 100%;
         padding: 30px;
-        margin-top: 50px;
 
     }
 
@@ -340,7 +335,7 @@
         flex-flow: column wrap;
         color: #fff;
         min-height: 30vh;
-        margin-top: 100px;
+        margin-top: 50px;
 
     }
 
@@ -353,7 +348,7 @@
     .fechas__titulo {
         font-size: 30px;
         font-weight: bolder;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
         text-transform: uppercase;
         color: rgb(255, 255, 255);
         text-align: center;
@@ -410,7 +405,7 @@
     .tarifas__cards__titulo {
         text-transform: uppercase;
         margin-bottom: 30px;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
         margin-top: 20px;
 
     }
@@ -448,7 +443,7 @@
     .servicios__info__titulo {
         font-weight: bolder;
         font-size: 40px;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
         text-transform: uppercase;
         color: #ffffff;
     }
@@ -545,7 +540,7 @@
         justify-content: center;
         color: #fff;
         min-height: 30vh;
-        margin-top: 100px;
+        margin-top: 50px;
     }
 
     .fechas__container {
@@ -561,7 +556,7 @@
         text-transform: uppercase;
         color: rgb(255, 255, 255);
         text-align: center;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
     }
 
     .fechas__cards {
@@ -615,7 +610,7 @@
         text-transform: uppercase;
         margin-bottom: 30px;
         margin-top: 10px;
-        font-family: 'Inria Sans', sans-serif;
+        font-family: 'Montserrat';
         color: #fff;
 
     }
