fixing modalform styles

--- a/src/components/WindowForm/WindowForm.css
+++ b/src/components/WindowForm/WindowForm.css
@@ -1,13 +1,14 @@
 @import url('../../Helper/Reset.css');
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
-.container__form {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 20px;
-  height: 100%;
+
+.modal-content {
+  background-color: transparent;
+  border: none;
+}
+
+.modal-header {
+  display: none;
 }
 
 h1 {
@@ -63,23 +64,43 @@ input[type="submit"] {
 .container__form__title {
   font-family: 'Montserrat';
   margin: 5px;
+  margin-bottom: 20px;
+  font-style: normal;
 }
 
 input[type="text"],
-input[type="email"],input[type="number"]  {
+input[type="email"],
+input[type="number"] {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  background-color: transparent;
   box-sizing: border-box;
   /* Esto hace que el padding no afecte el ancho total */
-  font-size: 16px;
+  font-size: 12px;
+  font-family: 'Montserrat';
+}
+
+input[type="radio"] {
+  font-family: 'Montserrat';
+
+}
+
+/* Estilo para anular el borde de enfoque */
+input:focus {
+  outline: none;
+}
+
+.radioLabel {
+  font-family: 'Montserrat';
+  font-size: 12px;
 }
 
 ::placeholder {
   font-family: 'Montserrat';
-  color: #999999;
+  color: #000000;
   font-size: 12px;
 }
 
@@ -89,12 +110,23 @@ textarea {
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
+  background-color: transparent;
+  font-family: 'Montserrat';
   border-radius: 5px;
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 12px;
   resize: vertical;
   /* Permite cambiar solo la altura vertical */
-  font-family: inherit;
   resize: none;
   margin-top: 10px;
+}
+
+/* Estilo para anular el borde de enfoque */
+textarea:focus {
+  outline: none;
+}
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root {
+  display: flex;
+  align-self: center;
 }
