--- a/src/components/SobreMi/SobreMi.css
+++ b/src/components/SobreMi/SobreMi.css
@@ -31,6 +31,11 @@
         color: #fff;
     }
 
+    
+    .aboutSection2{
+        margin-top: 90px;
+    }
+
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
@@ -42,6 +47,12 @@
         border-radius: 50%;
         margin-bottom: 30px;
     }
+
+    
+    .container2{
+        order: 1;
+    }
+
 
     .aboutContainer__textoContenedor {
         margin-top: 10px;
@@ -122,7 +133,10 @@
         align-items: center;
         color: #fff;
     }
-
+    
+    .aboutSection2{
+        margin-top: 90px;
+    }
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
@@ -133,6 +147,10 @@
         overflow: hidden;
         border-radius: 50%;
         margin-bottom: 30px;
+    }
+
+    .container2{
+        order: 1;
     }
 
     .aboutContainer__textoContenedor {
@@ -217,6 +235,9 @@
         color: #fff;
     }
 
+    .aboutSection2{
+        margin-top: 90px;
+    }
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
@@ -228,7 +249,9 @@
         border-radius: 50%;
         margin-bottom: 30px;
     }
-
+    .container2{
+        order: 1;
+    }
     .aboutContainer__textoContenedor {
         margin-top: 10px;
         position: relative;
