--- a/src/components/WindowForm/WindowForm.css
+++ b/src/components/WindowForm/WindowForm.css
@@ -10,11 +10,15 @@
 .modal-header {
   display: none;
 }
+.modal-body {
+  display: flex;
+  justify-content: center;
+}
 
 h1 {
   color: rgb(0, 0, 0);
   margin-bottom: 50px;
-  width: 100%;
+  width: 100% ;
   text-align: center;
   font-weight: bolder;
   text-transform: uppercase;
