--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -34,7 +34,7 @@ p {
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        opacity: 0.4;
+        opacity: 0.7;
         z-index: -1;
     }
 
@@ -50,6 +50,8 @@ p {
         font-size: 13px;
         font-weight: bolder;
         margin-bottom: 10px;
+        color: #fff;
+        font-family: 'Montserrat';
     }
 
     .mainContainer__button {
@@ -87,7 +89,7 @@ p {
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
-        opacity: 0.4;
+        opacity: 0.7;
         z-index: -1;
     }
 
@@ -100,9 +102,11 @@ p {
     }
 
     .mainContainer__text {
-        font-size: 25px;
+        font-size: 20px;
         font-weight: bolder;
         margin-bottom: 10px;
+        font-family: 'Montserrat';
+        color: #fff;
     }
 
     .mainContainer__button {
@@ -141,7 +145,7 @@ p {
         background-position: top;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        opacity: 0.3;
+        opacity: 0.5;
         z-index: -1;
     }
 
@@ -157,6 +161,8 @@ p {
         font-size: 20px;
         font-weight: bolder;
         margin-bottom: 10px;
+        font-family: 'Montserrat';
+        color: #fff
     }
 
     .mainContainer__button {
