--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 @import url(../../Helper/Reset.css);
-@import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
-
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 @media (max-width: 767px) {
     .header{
@@ -9,7 +8,7 @@
         align-items: center;
         justify-content: space-evenly;
         width: 100%;
-        background-color: #0a0a0a;
+        background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
     
@@ -34,7 +33,8 @@
         color: #fff;
         font-size:15px;
         margin: 10px;
-        font-family: 'Inria Sans', sans-serif;
+        font-weight: 700;
+        font-family: "Poppins", sans-serif;
         text-transform: uppercase;
         transition: 0.4s;
         color: #ffffff;
@@ -43,6 +43,9 @@
         margin:10px;
         border-radius: 5px;
       
+    }
+    .active-link{
+        color: #A92935;
     }
   }
   
@@ -53,7 +56,7 @@
         justify-content: space-around;
         align-items: center;
         width: 100%;
-        background-color: #0a0a0a;
+        background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
     
@@ -77,7 +80,8 @@
         color: #fff;
         font-size: 12px;
         margin: 10px;
-        font-family: 'Inria Sans', sans-serif;
+        font-weight: 700;
+        font-family: "Poppins", sans-serif;
         text-transform: uppercase;
         transition: 0.4s;
         color: #ffffff;
@@ -87,10 +91,8 @@
         border-radius: 5px;
       
     }
-    .nav__list__item:hover{
-        background-color: #c45252;
-        color: #ffffff;
-        padding: 10px 10px;
+    .active-link{
+        color: #A92935;
     }
 
 }
@@ -102,7 +104,7 @@
         justify-content: space-around;
         align-items: center;
         width: 100%;
-        background-color: #0a0a0a;
+        background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
     
@@ -124,11 +126,11 @@
     .nav__list__item{
         padding: 5px;
         color: #fff;
-        font-size: 12px;
+        font-size: 15px;
         margin: 10px;
-        font-family: 'Inria Sans', sans-serif;
+        font-weight: 700;
+        font-family: "Poppins", sans-serif;
         text-transform: uppercase;
-        transition: 0.4s;
         color: #ffffff;
         text-decoration: none;
         padding: 0 10px;
@@ -137,15 +139,13 @@
         cursor: pointer;
       
     }
-    .nav__list__item:hover{
-        background-color: #c45252;
-        color: #ffffff;
-        padding: 10px 10px;
+    .active-link{
+        color: #A92935;
     }
 
 } 
 
-  
+
   
 
   
