feat main section almost finished

--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,10 +1,6 @@
 @import url('../../Helper/Reset.css');
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
-h3,
-p {
-    font-family: 'Montserrat';
-}
 
 @media (max-width: 767px) {
 
@@ -12,11 +8,9 @@ p {
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         height: 100%;
-        background-position: top;
-        background-size: cover;
 
     }
 
@@ -34,10 +28,18 @@ p {
         background-repeat: no-repeat;
     }
 
+    .mainContainer__textSection {
+        z-index: 2;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+    }
+
     .mainContainer__title {
         color: white;
         opacity: 1;
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+        font-style: normal;
         font-size: 16px;
         margin-bottom: 10px;
     }
@@ -47,15 +49,28 @@ p {
         font-weight: bolder;
         margin-bottom: 10px;
         color: #fff;
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+
+        text-align: center;
     }
 
     .mainContainer__button {
-        font-family: 'Montserrat';
-        font-size: 12px;
+        font-family: "Poppins", sans-serif;
+
+        text-transform: none !important;
+        background-color: #A92935 !important;
+        font-size: 10px !important;
+        padding: 5px !important;
     }
 
+    .mainContainer__button>img {
+        width: 25%;
+    }
 
+    .mainContainer__footer {
+        z-index: 2;
+        margin-bottom: 20px;
+    }
 
 }
 
@@ -64,7 +79,7 @@ p {
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         height: 100%;
         background-position: top;
@@ -86,10 +101,18 @@ p {
         background-repeat: no-repeat;
     }
 
+    .mainContainer__textSection {
+        z-index: 2;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+    }
+
     .mainContainer__title {
         color: white;
         opacity: 1;
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+        font-style: normal;
         font-size: 30px;
         margin-bottom: 20px;
     }
@@ -98,13 +121,21 @@ p {
         font-size: 20px;
         font-weight: bolder;
         margin-bottom: 10px;
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+
         color: #fff;
     }
 
     .mainContainer__button {
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+        text-transform: none !important;
+        background-color: #A92935 !important;
         font-size: 20px;
+    }
+
+    .mainContainer__footer {
+        z-index: 2;
+        margin-bottom: 20px;
     }
 
 
@@ -116,12 +147,9 @@ p {
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         height: 100%;
-        background-position: top;
-        background-size: cover;
-
     }
 
     .mainContainer::before {
@@ -131,7 +159,7 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("https://i.ibb.co/zR10MNS/portrait3-Image.jpg");
+        background-image: url("https://i.ibb.co/fMKCbMv/Background.png");
         background-position-y: -120px;
         background-size: cover;
         background-position: top;
@@ -139,25 +167,44 @@ p {
         background-repeat: no-repeat;
     }
 
+    .mainContainer__textSection {
+        z-index: 2;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+    }
+
     .mainContainer__title {
         color: white;
         opacity: 1;
-        font-family: 'Montserrat';
-        font-size: 25px;
+        font-family: "Poppins", sans-serif;
+        font-style: normal;
+        font-size: 38px;
         margin-bottom: 20px;
+        line-height: 20px;
     }
 
     .mainContainer__text {
-        font-size: 20px;
+        font-size: 25px;
         font-weight: bolder;
         margin-bottom: 10px;
-        font-family: 'Montserrat';
-        color: #fff
+        font-family: "Poppins", sans-serif;
+        font-style: normal;
+        color: #fff;
+        line-height: 48px;
     }
 
     .mainContainer__button {
-        font-family: 'Montserrat';
+        font-family: "Poppins", sans-serif;
+
         font-size: 15px;
+        text-transform: none !important;
+        background-color: #A92935 !important;
+    }
+
+    .mainContainer__footer {
+        z-index: 2;
+        margin-bottom: 20px;
     }
 
 
