--- a/src/components/CardGroup/CardGroup.css
+++ b/src/components/CardGroup/CardGroup.css
@@ -1,56 +1,70 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+
 @media (max-width: 767px) {
 
-    .ContainerPensumCard{
+    .ContainerPensumCard {
         width: 70%;
-        margin-top: 15px;}
-
-        .contentList{
-            display: flex;
-            flex-direction: column;
-            padding: 15px;
-        }
-        
-        li{
-            list-style-type: disc;
-        }
-  }
-  
-@media (min-width: 768px) and (max-width: 1023px) {
-    .ContainerPensumCard{
-        margin-top: 20px;
-        width: 40%;
+        margin-top: 15px;
     }
-    
-    .contentList{
+
+    .contentList {
         display: flex;
         flex-direction: column;
         padding: 15px;
     }
-    
-    li{
+
+    li {
+        list-style-type: disc;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .ContainerPensumCard {
+        margin-top: 20px;
+        width: 40%;
+    }
+
+    .contentList {
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+
+    .contentList__item {
+        font-family: "Poppins", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    li {
         list-style-type: disc;
     }
 
 }
 
 @media screen and (min-width: 1023px) {
- 
-    .ContainerPensumCard{
+
+    .ContainerPensumCard {
         margin-top: 20px;
         width: 30%;
+        background: #FAFAFA !important;
+
     }
-    .contentList{
+
+    .contentList {
         display: flex;
         flex-direction: column;
         padding: 15px;
     }
-    
-    li{
+
+    .contentList__item {
+        font-family: "Poppins", sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    li {
         list-style-type: disc;
     }
-} 
-
-  
-  
-
-  
+}
