--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,19 @@
 @import url(../../Helper/Reset.css);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --white: #FFFFFF;
+}
+
 @media (max-width: 767px) {
-    .header{
+    .header {
         display: flex;
         flex-flow: row wrap;
         align-items: center;
@@ -11,27 +22,27 @@
         background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
-    
-     .header__logo{
+
+    .header__logo {
         width: 120px;
         height: 60px;
         padding: 5px;
     }
 
-    .nav{
+    .nav {
         display: inherit;
         align-items: center;
     }
 
-    .nav__list{
+    .nav__list {
         display: flex;
         flex-flow: row wrap;
     }
 
-    .nav__list__item{
+    .nav__list__item {
         padding: 5px;
         color: #fff;
-        font-size:15px;
+        font-size: 15px;
         margin: 10px;
         font-weight: 700;
         font-family: "Poppins", sans-serif;
@@ -40,17 +51,18 @@
         color: #ffffff;
         text-decoration: none;
         padding: 0 10px;
-        margin:10px;
+        margin: 10px;
         border-radius: 5px;
-      
+
     }
-    .active-link{
+
+    .active-link {
         color: #A92935;
     }
-  }
-  
+}
+
 @media (min-width: 768px) and (max-width: 1023px) {
-    .header{
+    .header {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-around;
@@ -59,23 +71,23 @@
         background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
-    
-     .header__logo{
+
+    .header__logo {
         width: 150px;
         height: 80px;
         padding: 5px;
     }
 
-    .nav{
+    .nav {
         display: inherit;
         align-items: center;
     }
 
-    .nav__list{
+    .nav__list {
         display: flex;
     }
 
-    .nav__list__item{
+    .nav__list__item {
         padding: 5px;
         color: #fff;
         font-size: 12px;
@@ -87,18 +99,19 @@
         color: #ffffff;
         text-decoration: none;
         padding: 0 10px;
-        margin:10px;
+        margin: 10px;
         border-radius: 5px;
-      
+
     }
-    .active-link{
+
+    .active-link {
         color: #A92935;
     }
 
 }
 
 @media screen and (min-width: 1023px) {
-    .header{
+    .header {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-around;
@@ -107,26 +120,26 @@
         background: linear-gradient(180deg, rgba(30, 30, 30, 0.983871) 81.49%, rgba(30, 30, 30, 0) 100%);
         height: 100%;
     }
-    
-     .header__logo{
+
+    .header__logo {
         width: 180px;
         height: 90px;
         padding: 5px;
     }
 
-    .nav{
+    .nav {
         display: inherit;
         align-items: center;
     }
 
-    .nav__list{
+    .nav__list {
         display: flex;
     }
 
-    .nav__list__item{
+    .nav__list__item {
         padding: 5px;
         color: #fff;
-        font-size: 15px;
+        font-size: var(--h3);
         margin: 10px;
         font-weight: 700;
         font-family: "Poppins", sans-serif;
@@ -134,18 +147,14 @@
         color: #ffffff;
         text-decoration: none;
         padding: 0 10px;
-        margin:10px;
+        margin: 10px;
         border-radius: 5px;
         cursor: pointer;
-      
+
     }
-    .active-link{
+
+    .active-link {
         color: #A92935;
     }
 
-} 
-
-
-  
-
-  
+}
