--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -2,6 +2,17 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark:#1E1E1E;
+    --white: #FFFFFF;
+}
+
 @media (max-width: 767px) {
 
 
@@ -175,13 +186,13 @@
         opacity: 1;
         font-family: "Poppins", sans-serif;
         font-style: normal;
-        font-size: 38px;
+        font-size: var(--h1);
         margin-bottom: 20px;
         line-height: 20px;
     }
 
     .mainContainer__text {
-        font-size: 25px;
+        font-size: var(--h2);
         font-weight: bolder;
         margin-bottom: 10px;
         font-family: "Poppins", sans-serif;
@@ -192,13 +203,12 @@
 
     .mainContainer__button {
         font-family: "Poppins", sans-serif;
-
         font-size: 15px;
         text-transform: none !important;
-        background-color: #A92935 !important;
+        background-color: var(--primary) !important;
     }
 
-    .mainContainer__button__paragraph{
+    .mainContainer__button__paragraph {
         margin-right: 5px;
     }
 
