--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -2,7 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
-
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark:#1E1E1E;
+    --white: #FFFFFF;
+}
 
 @media (max-width: 767px) {
     .servicios {
@@ -10,6 +19,7 @@
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
+        background-color: var(--dark);
     }
 
     .servicios__info {
@@ -217,6 +227,7 @@
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
+        background-color: var(--dark);
     }
 
     .servicios__info {
@@ -226,7 +237,6 @@
         align-items: center;
         width: 100%;
         padding: 30px;
-
     }
 
     .servicios__info__titulo {
@@ -428,6 +438,7 @@
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
+        background-color: var(--dark);
     }
 
     .servicios__info {
@@ -442,7 +453,7 @@
 
     .servicios__info__titulo {
         font-weight: bolder;
-        font-size: 40px;
+        font-size: var(--h1);
         font-family: 'Montserrat';
         text-transform: uppercase;
         color: #ffffff;
