--- a/src/components/CardGroup/CardGroup.css
+++ b/src/components/CardGroup/CardGroup.css
@@ -1,21 +1,67 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark: #1E1E1E;
+    --white: #FFFFFF;
+}
+
 @media (max-width: 767px) {
 
     .ContainerPensumCard {
         width: 80%;
         margin-top: 15px;
     }
-    .cardText{
+
+    .ContainerPensumCard__title {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        text-transform: uppercase;
+    }
+
+    .cardText {
         height: 100%;
     }
-    .cardText__description{
+
+    .cardText__description {
         width: 100%;
         height: 40%;
+        margin-top: 10px;
     }
-    .cardText__subtitle{
+
+    .cardText__description__body {
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+    }
+
+    .cardText__subtitle {
         height: 10%;
+    }
+
+    .cardText__subtitle__h3 {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        color: var(--primary);
+
+
     }
 
     .contentList {
@@ -27,6 +73,13 @@
 
     li {
         list-style-type: disc;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+
     }
 }
 
@@ -36,15 +89,50 @@
         width: 40%;
     }
 
-    .cardText{
+    .ContainerPensumCard__title {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        text-transform: uppercase;
+    }
+
+    .cardText {
         height: 100%;
     }
-    .cardText__description{
+
+    .cardText__description {
         width: 100%;
         height: 40%;
     }
-    .cardText__subtitle{
+
+    .cardText__description__body {
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+
+    }
+
+    .cardText__subtitle {
         height: 10%;
+        margin-top: 20px;
+    }
+
+    .cardText__subtitle__h3 {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        color: var(--primary);
+
+
     }
 
     .contentList {
@@ -62,6 +150,13 @@
 
     li {
         list-style-type: disc;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+
     }
 
 }
@@ -74,15 +169,50 @@
         background: #FAFAFA !important;
 
     }
-    .cardText{
+
+    .ContainerPensumCard__title {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        text-transform: uppercase;
+    }
+
+    .cardText {
         height: 100%;
     }
-    .cardText__description{
+
+    .cardText__description {
         width: 100%;
         height: 40%;
     }
-    .cardText__subtitle{
+
+    .cardText__description__body {
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+
+    }
+
+    .cardText__subtitle {
         height: 10%;
+        margin-top: 20px;
+    }
+
+    .cardText__subtitle__h3 {
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        text-align: left;
+        color: var(--primary);
+
     }
 
     .contentList {
@@ -100,5 +230,12 @@
 
     li {
         list-style-type: disc;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: justified;
+
     }
 }
