--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -1,6 +1,5 @@
 @import url('../../Helper/Reset.css');
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 :root {
     --h1: 48px;
@@ -9,7 +8,7 @@
     --body: 16px;
     --link: 16px;
     --primary: #A92935;
-    --dark:#1E1E1E;
+    --dark: #1E1E1E;
     --white: #FFFFFF;
 }
 
@@ -127,6 +126,7 @@
         display: flex;
         flex-flow: column wrap;
         width: 100%;
+        background-color: var(--dark);
     }
 
     .fechas {
@@ -145,12 +145,13 @@
     }
 
     .fechas__titulo {
-        font-size: 30px;
-        font-weight: bolder;
-        text-transform: uppercase;
-        color: #ffff;
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
         text-align: center;
-        font-family: 'Montserrat';
+        text-transform: uppercase;
     }
 
     .fechas__cards {
@@ -161,10 +162,7 @@
     }
 
     .cards {
-        border: 1px solid #fff;
         padding: 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
         margin: 20px;
         position: relative;
         opacity: 0;
@@ -172,21 +170,28 @@
     }
 
     .fechas__cards__inscripciones__titulo {
-        font-size: 20px;
-        text-transform: uppercase;
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        letter-spacing: -0.02em;
         text-align: center;
-        margin-bottom: 15px;
-        font-weight: bolder;
-        font-family: 'Montserrat';
-
+        text-transform: uppercase;
+        margin-bottom: 12px;
     }
 
     .fechas__cards__inscripciones__parrafo {
-        font-size: 18px;
-        color: #e48983;
-        text-transform: capitalize;
-        font-family: 'Montserrat';
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+    }
 
+    .fechas__cards__arrow {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .cards-show {
@@ -338,6 +343,8 @@
         display: flex;
         flex-flow: column wrap;
         width: 100%;
+        background-color: var(--dark);
+
     }
 
     .fechas {
@@ -356,12 +363,22 @@
     }
 
     .fechas__titulo {
-        font-size: 30px;
-        font-weight: bolder;
-        font-family: 'Montserrat';
-        text-transform: uppercase;
-        color: rgb(255, 255, 255);
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
         text-align: center;
+        text-transform: uppercase;
+    }
+
+
+    .cards {
+        padding: 20px;
+        margin: 20px;
+        position: relative;
+        opacity: 0;
+        width: 20%;
     }
 
     .fechas__cards {
@@ -370,31 +387,30 @@
         justify-content: space-evenly;
     }
 
-    .cards {
-        border: 1px solid #fff;
-        padding: 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        margin: 20px;
-        position: relative;
-        opacity: 0;
-        width: 20%;
-    }
-
     .fechas__cards__inscripciones__titulo {
+        font-family: Poppins;
         font-size: 15px;
-        text-transform: uppercase;
-        font-family: 'Montserrat';
+        font-weight: 700;
+        letter-spacing: -0.02em;
         text-align: center;
-        margin-bottom: 15px;
-        font-weight: bolder;
+        text-transform: uppercase;
+        margin-bottom: 12px;
+
     }
 
     .fechas__cards__inscripciones__parrafo {
-        font-size: 18px;
-        color: #e48983;
-        text-transform: capitalize;
-        font-family: 'Montserrat';
+        font-family: Poppins;
+        font-size: 12;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+    }
+
+    .fechas__cards__arrow {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .cards-show {
@@ -543,6 +559,7 @@
         display: flex;
         flex-flow: column wrap;
         width: 100%;
+        background-color: var(--dark);
     }
 
     .fechas {
@@ -562,12 +579,13 @@
     }
 
     .fechas__titulo {
-        font-size: 30px;
-        font-weight: bolder;
-        text-transform: uppercase;
-        color: rgb(255, 255, 255);
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
         text-align: center;
-        font-family: 'Montserrat';
+        text-transform: uppercase;
     }
 
     .fechas__cards {
@@ -577,38 +595,42 @@
     }
 
     .cards {
-        border: 1px solid #fff;
         padding: 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
         margin: 20px;
         position: relative;
         opacity: 0;
-        width: 25%;
+        width: 20%;
     }
 
     .fechas__cards__inscripciones__titulo {
-        font-size: 25px;
-        text-transform: uppercase;
-        font-family: 'Montserrat';
+        font-family: Poppins;
+        font-size: var(--h3);
+        font-weight: 700;
+        letter-spacing: -0.02em;
         text-align: center;
+        text-transform: uppercase;
         margin-bottom: 15px;
-        font-weight: bolder;
-        font-style: italic;
     }
 
     .fechas__cards__inscripciones__parrafo {
-        font-size: 25px;
-        color: #e48983;
-        text-transform: capitalize;
-        font-family: 'Montserrat';
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+    }
+
+    .fechas__cards__arrow {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .cards-show {
         opacity: 1;
         transition: 1s ease-in;
     }
-
 
     .tarifas-pagos {
         display: flex;
@@ -622,7 +644,7 @@
         margin-bottom: 30px;
         margin-top: 10px;
         font-family: 'Montserrat';
-        color: #fff;
+        color: #ffffff;
 
     }
 
