--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -10,6 +10,21 @@
   height: 100%;
 }
 
+.container__form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../img/Background-2.avif");
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  z-index: -1; /* Añade un z-index para colocar el pseudo-elemento detrás del contenido del contenedor */
+}
+
 h1 {
   color: rgb(0, 0, 0);
   margin-bottom: 50px;
