--- a/src/components/Otros/Otros.css
+++ b/src/components/Otros/Otros.css
@@ -1,5 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark: #1E1E1E;
+    --white: #FFFFFF;
+}
 
 @media (max-width: 767px) {
     .otrosContainer {
@@ -7,6 +17,8 @@
         flex-flow: column wrap;
         width: 100%;
         min-height: 50vh;
+        background-color: var(--dark);
+        margin-top: 0;
     }
 
     .otrosContainer__titulo {
@@ -46,7 +58,8 @@
         justify-content: center;
         width: 100%;
         padding: 20px;
-        margin-top: 80px;
+        background-color: var(--dark);
+
     }
 
     .otrosContainer__titulo {
